master-detail navto done, dynamic generate table half done
formatter function does not work

--- a/arui/WebContent/manifest.json
+++ b/arui/WebContent/manifest.json
@@ -98,6 +98,11 @@
 				{
 					"pattern": "manager",
 					"name": "manager",
+					"target": ["manager"]
+				},
+				{
+					"pattern": "managerdetail/{param}",
+					"name": "managerdetail",
 					"target": ["manager", "managerdetail"]
 				},
 				{
