add type param for navto match, fix query employee allowance error

--- a/arui/WebContent/manifest.json
+++ b/arui/WebContent/manifest.json
@@ -101,7 +101,7 @@
 					"target": ["manager"]
 				},
 				{
-					"pattern": "managerdetail/{param}",
+					"pattern": "managerdetail/{key}/{type}",
 					"name": "managerdetail",
 					"target": ["manager", "managerdetail"]
 				},
