refine input page, support view/edit mode switch, role control

--- a/arui/WebContent/manifest.json
+++ b/arui/WebContent/manifest.json
@@ -98,7 +98,7 @@
 				{
 					"pattern": "manager",
 					"name": "manager",
-					"target": ["manager"]
+					"target": ["manager", "managerdetail"]
 				},
 				{
 					"pattern": "managerdetail/{key}/{type}",
